name:                gla-layout
version:             0.1.0.0
synopsis:            Graphical Linear Algebra diagram layout algorithm
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable gla-layout
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base, miso, ghcjs-base
  default-language:    Haskell2010
